--- a/style/goal-of-the-project.css
+++ b/style/goal-of-the-project.css
@@ -1,13 +1,10 @@
 @import url("variables.css");
 
-.GoalOfTheProjectSection {
-	margin-top: 40px;
-}
-
 .GoalOfTheProjectSection .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr 1fr 1fr 1fr 1fr 2fr;
+    grid-template-rows: 0fr 1fr 1fr 1fr;
+    height: 45vh;
 }
 
 .GoalOfTheProjectSection .grid-container .grid-item {
